samples/_failures_safe/1761340383_e329a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90155c43.c: In function ‘print_token’:
./samples/SAFE/__tmp_90155c43.c:169:9: error: expected expression at end of input
  169 |         "NUMBER",
      |         ^~~~~~~~
./samples/SAFE/__tmp_90155c43.c:169:9: error: expected declaration or statement at end of input
